--- a/StudentArchitect/src/app/class/class.component.html
+++ b/StudentArchitect/src/app/class/class.component.html
@@ -14,7 +14,7 @@
         </select>
       </div>
     </div>
-    <div class="leftnav_content">
+    <div class="leftnav_content" title="Select Class">
       <div class="leftnav_icons">
         <svg fill="currentColor" preserveAspectRatio="xMidYMid meet" height="20" width="20" viewBox="0 0 18 13">
           <g fill="#000" fill-rule="nonzero">
@@ -38,7 +38,7 @@
         </select>
       </div>
     </div>
-    <div class="leftnav_content_subject">
+    <div class="leftnav_content_subject" title="Select Subject">
       <div class="subject_icons">
         <div class="leftnav_icons">
           <svg fill="currentColor" preserveAspectRatio="xMidYMid meet" height="19" width="17" viewBox="0 0 16 16">
@@ -50,7 +50,6 @@
           <span>SUBJECTS</span>
         </div>
       </div>
-
       <div class="subject_checkbox">
         <ul class="unstyled centered">
           <li>
@@ -70,9 +69,7 @@
             <label for="styled-checkbox-4">English</label>
           </li>
         </ul>
-
       </div>
-
     </div>
   </div>
 
@@ -158,8 +155,7 @@
       <a class="subject">
         <div class="subject-icon icon-bg-reddish">
           <svg fill="currentColor" preserveAspectRatio="xMidYMid meet" height="36" width="36" viewBox="0 0 27 18" class="_3_28c">
-            <path d="M11.533-.049l11.618 18L0 17.903 11.533-.05zm4.212 4.32l2.485-3.9L27 14.02h-4.992l-6.263-9.748z" fill="#000"
-              fill-rule="nonzero"></path>
+            <path d="M11.533-.049l11.618 18L0 17.903 11.533-.05zm4.212 4.32l2.485-3.9L27 14.02h-4.992l-6.263-9.748z" fill="#000" fill-rule="nonzero"></path>
           </svg>
         </div>
         <h2 class="subject-name">History</h2>
