--- a/StudentArchitect/src/app/class/class.component.html
+++ b/StudentArchitect/src/app/class/class.component.html
@@ -9,8 +9,8 @@
         </svg>
       </div>
       <div class="board_text">
-        <select class="leftnav_select">
-          <option value="cbse">CBSE</option>
+        <select class="leftnav_select" [(ngModel)]="selectedBoardId" (change) = "getClasses()">
+          <option *ngFor="let board of boards" [value]="board.boardId">{{board.name}}</option>
         </select>
       </div>
     </div>
@@ -24,17 +24,8 @@
         </svg>
       </div>
       <div class="leftnav_text">
-        <select class="leftnav_select">
-          <option value="class1">CLASS 1</option>
-          <option value="class2">CLASS 2</option>
-          <option value="class3">CLASS 3</option>
-          <option value="class4">CLASS 4</option>
-          <option value="class5">CLASS 5</option>
-          <option value="class6">CLASS 6</option>
-          <option value="class7">CLASS 7</option>
-          <option value="class8">CLASS 8</option>
-          <option value="class9">CLASS 9</option>
-          <option value="class10">CLASS 10</option>
+        <select class="leftnav_select" [(ngModel)]="selectedClassId" (change)="getSubjects()">
+          <option *ngFor="let class of classes" [value]="class.classId">{{class.name}}</option>
         </select>
       </div>
     </div>
