--- a/StudentArchitect/src/app/class/class.component.css
+++ b/StudentArchitect/src/app/class/class.component.css
@@ -68,16 +68,16 @@
 
 .styled-checkbox+label:before {
   content: "";
-  margin-right: 10px;
+  margin-right: 8px;
   display: inline-block;
   vertical-align: text-top;
-  width: 18px;
+  width: 20px;
   height: 18px;
   background: white;
 }
 
 .styled-checkbox:hover+label:before {
-  background: #f35429;
+  background: #55bbea;
 }
 
 .styled-checkbox:focus+label:before {
@@ -85,7 +85,7 @@
 }
 
 .styled-checkbox:checked+label:before {
-  background: #f35429;
+  background: #55bbea;
 }
 
 .styled-checkbox:disabled+label {
@@ -103,10 +103,10 @@
   position: absolute;
   left: 5px;
   top: 9px;
-  background: white;
+  background: black;
   width: 2px;
   height: 2px;
-  box-shadow: 2px 0 0 white, 4px 0 0 white, 4px -2px 0 white, 4px -4px 0 white, 4px -6px 0 white, 4px -8px 0 white;
+  box-shadow: 2px 0 0 black, 4px 0 0 black, 4px -2px 0 black, 4px -4px 0 black, 4px -6px 0 black, 4px -8px 0 black;
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
 }
