--- a/StudentArchitect/src/app/subject-detail/subject-detail.component.css
+++ b/StudentArchitect/src/app/subject-detail/subject-detail.component.css
@@ -1,3 +1,19 @@
+.chapter-section-content{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.chapter-section-panel{
+  min-width: 20%;
+  max-width: 100%;
+  height: 100%;
+}
+.video-content-panel{
+  width: 80%;
+  height: 100%;
+}
+
 .subject-detail{
   margin-left: 20%;
   margin-right: 20%;
@@ -9,8 +25,13 @@
   background-color:  #fff;
   display: flex;
   flex-direction: column;
-  padding: 0px 50px 0 20px;color: #686f7a;
+  padding: 0px 0px 0 0px;
+  color: #686f7a;
   margin-bottom: 25px;
+}
+
+.chapter-progress{
+  padding-right: 50px;
 }
 
 .chapter-panel:after, .panel-body:before {
@@ -22,6 +43,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  padding-left: 20px;
 }
 
 
@@ -62,7 +84,7 @@
     cursor: pointer;
   }
   
-  p,div {
+  p,div,.ch-section {
     color: rgba(48, 69, 92, 0.8);
     font-size: 17px;
     line-height: 26px;
@@ -87,7 +109,7 @@
     /* padding: 0; */
     /* margin: 0; */
     padding-bottom: 4px;
-    padding-top: 18px;
+    /* padding-top: 18px; */
     /* border-top: 1px dotted #dce7eb; */
   }
   ul li:nth-of-type(1) {
@@ -172,4 +194,35 @@
       transform: rotateX(0deg);
     }
   }
-  
+
+  .section-panel{
+    position: relative;
+    border-top: 2px solid #f2f3f5;
+    color: #686f7a;
+    cursor: pointer;
+  }
+
+  .section-detail{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 15px 20px;
+  }
+
+  .curriculum-item--title--3etrQ {
+    flex: 1;
+    min-width: 1px;
+    order: 2;
+    margin-right: 5px;
+  }
+
+  .play-icon{
+    margin-right: 10px;
+  }
+
+  .curriculum-item--duration--1OEOp {
+    order: 3;
+    opacity: .7;
+    margin-right: 30px;
+}
+
