--- a/StudentArchitect/src/app/subject-detail/subject-detail.component.html
+++ b/StudentArchitect/src/app/subject-detail/subject-detail.component.html
@@ -51,8 +51,8 @@
       
       <!-- <iframe width="420" height="315" src="https://www.youtube.com/watch?v=_5A3hkHXHX8"   ></iframe> -->
 
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/_5A3hkHXHX8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
+      <!--iframe width="100%" height="100%" src="https://www.youtube.com/embed/_5A3hkHXHX8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe-->
+      <iframe width="100%" height="100%" [src]="selectedSection.videoPath | safe" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
   </div>
 </div>
